# ESM-Python-Nairobi

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ESM_Python-Nairobi.docx  ESM_Python-Nairobi_equations.docx
notebooks/cwd/: #_generate_graphics.ipynb
notebooks/selected_PyPSA_examples/: battery-electric-vehicle-charging.ipynb  minimal_example_pf.ipynb
notebooks/tutorials/: #_generate_graphics.ipynb  01_getting_started.ipynb  02_components_basics.ipynb  03_network_visualization.ipynb  04_basic_optimization.ipynb  05_investment_planning.ipynb  06_storage_and_balancing.ipynb  07_sector_coupling.ipynb  08_diy_solar_simulation.ipynb
